--- a/blog.html
+++ b/blog.html
@@ -255,5 +255,6 @@
         Made by <a class="hover:text-gray-200" href="#">aboOuf</a>
       </div>
     </footer>
+    <div>ouf</div>
   </body>
 </html>
