--- a/blog.html
+++ b/blog.html
@@ -250,9 +250,28 @@
       </div>
     </div>
 
-    <footer class="bg-gray-800 font-poppin text-white">
-      <div class="mx-auto max-w-6xl px-8 py-8 text-center">
-        Made by <a class="hover:text-gray-200" href="#">aboOuf</a>
+    <footer class="bg-gray-800 font-poppin">
+      <div class="mx-auto max-w-6xl px-8 py-8">
+        <div class="-ml-2 mb-2">
+          <a
+            class="mb-2 mr-2 inline-block rounded px-2 py-2 text-gray-500 hover:bg-gray-500 hover:text-white"
+            href="#"
+            >About Us</a
+          >
+          <a
+            class="mb-2 mr-2 inline-block rounded px-2 py-2 text-gray-500 hover:bg-gray-500 hover:text-white"
+            href="#"
+            >Privacy</a
+          >
+          <a
+            class="mb-2 mr-2 inline-block rounded px-2 py-2 text-gray-500 hover:bg-gray-500 hover:text-white"
+            href="#"
+            >Blog</a
+          >
+        </div>
+        <div>
+          <p class="text-sm text-gray-500">&copy; 2023 ouf</p>
+        </div>
       </div>
     </footer>
   </body>
