--- a/page.html
+++ b/page.html
@@ -124,16 +124,46 @@
     <section
       class="mx-auto max-w-6xl px-6 py-10 font-poppin text-lg text-gray-800 md:px-8"
     >
-      <div>
-        About Us Lorem ipsum dolor sit amet consectetur adipisicing elit. A quod
-        amet ipsam doloremque praesentium magnam? Aliquid suscipit aliquam
-        officiis nihil quam dolores voluptatem, vitae fugit architecto esse
-        totam doloremque omnis. Lorem ipsum dolor sit amet consectetur,
-        adipisicing elit. Ducimus debitis, quas eos excepturi alias incidunt,
-        quam commodi placeat quo exercitationem distinctio dolore reiciendis
-        assumenda omnis ex voluptatibus, blanditiis recusandae corporis. Lorem
-        ipsum dolor sit amet consectetur adipisicing elit.
-      </div>
+    <div>
+      <div class="-mx-6 flex flex-wrap">
+        <div class="mb-8 w-full flex-none px-6 lg:w-[20rem]">
+          <div class="sticky top-8 overflow-hidden rounded border bg-white">
+            <div class="border-b">
+              <a
+                class="block border-l-2 border-cyan-600 px-3 py-4 font-semibold text-black hover:bg-gray-300"
+                href="#"
+                >AboutUs</a
+              >
+            </div>
+            <div class="border-b">
+              <a
+                class="block bg-gray-50 px-3 py-4 pl-6 text-sm text-black hover:bg-gray-300"
+                href="#"
+                >History</a
+              >
+            </div>
+            <div class="border-b">
+              <a
+                class="block bg-gray-50 px-3 py-4 pl-6 text-sm text-gray-500 hover:bg-gray-300"
+                href="#"
+                >Work</a
+              >
+            </div>
+            
+          </div>
+          
+        </div>
+        <div class="flex-1 px-6">
+          About Us Lorem ipsum dolor sit amet consectetur adipisicing elit. A quod
+          amet ipsam doloremque praesentium magnam? Aliquid suscipit aliquam
+          officiis nihil quam dolores voluptatem, vitae fugit architecto esse
+          totam doloremque omnis. Lorem ipsum dolor sit amet consectetur,
+          adipisicing elit. Ducimus debitis, quas eos excepturi alias incidunt,
+          quam commodi placeat quo exercitationem distinctio dolore reiciendis
+          assumenda omnis ex voluptatibus, blanditiis recusandae corporis. Lorem
+          ipsum dolor sit amet consectetur adipisicing elit.
+        </div>
+    </div>
     </section>
 
     <div class="bg-gray-200">
