--- a/page.html
+++ b/page.html
@@ -123,35 +123,20 @@
     </div>
     <section
       class="mx-auto max-w-6xl px-6 py-10 font-poppin text-lg text-gray-800 md:px-8"
-    >
-    <div>
+    > 
       <div class="-mx-6 flex flex-wrap">
         <div class="mb-8 w-full flex-none px-6 lg:w-[20rem]">
-          <div class="sticky top-8 overflow-hidden rounded border bg-white">
-            <div class="border-b">
-              <a
-                class="block border-l-2 border-cyan-600 px-3 py-4 font-semibold text-black hover:bg-gray-300"
-                href="#"
-                >AboutUs</a
-              >
-            </div>
-            <div class="border-b">
-              <a
-                class="block bg-gray-50 px-3 py-4 pl-6 text-sm text-black hover:bg-gray-300"
-                href="#"
-                >History</a
-              >
-            </div>
-            <div class="border-b">
-              <a
-                class="block bg-gray-50 px-3 py-4 pl-6 text-sm text-gray-500 hover:bg-gray-300"
-                href="#"
-                >Work</a
-              >
-            </div>
-            
-          </div>
-          
+          <ul class="sidebar sticky top-8 overflow-hidden rounded border bg-white">
+            <li>
+              About Us
+            </li>
+            <li>
+              History
+            </li>
+            <li>
+              Work
+            </li>
+          </ul>
         </div>
         <div class="flex-1 px-6">
           About Us Lorem ipsum dolor sit amet consectetur adipisicing elit. A quod
@@ -163,7 +148,7 @@
           assumenda omnis ex voluptatibus, blanditiis recusandae corporis. Lorem
           ipsum dolor sit amet consectetur adipisicing elit.
         </div>
-    </div>
+      </div>
     </section>
 
     <div class="bg-gray-200">
